test: add date extension tests

--- a/Join.xcodeproj/xcshareddata/xcschemes/Join.xcscheme
+++ b/Join.xcodeproj/xcshareddata/xcschemes/Join.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BF26821229422AE7007DCFBE"
+               BuildableName = "JoinTests.xctest"
+               BlueprintName = "JoinTests"
+               ReferencedContainer = "container:Join.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
