test: add user manager tests

--- a/Join.xcodeproj/xcshareddata/xcschemes/Join.xcscheme
+++ b/Join.xcodeproj/xcshareddata/xcschemes/Join.xcscheme
@@ -37,6 +37,11 @@
                BlueprintName = "JoinTests"
                ReferencedContainer = "container:Join.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "JoinTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
